--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     width: 400px;
     text-align: center;
     margin: 50px;
+    border-radius: 20px 20px 20px ;
     box-shadow: 30px 30px 30px #000000;
     text-shadow: 1px 2px 3px #80ffff;
     border: 4mm ridge rgba(211, 220, 50, .6);
