--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@ body{
     text-shadow: 1px 2px 3px #80ffff;
     border: 4mm ridge rgba(211, 220, 50, .6);
 }
+h1{
+    text-shadow: 1px 1px 1px #000000 -10px 10px 10px #80ffff;
+}
+em{
+    color: yellow;
+    
+}
